--- a/signal-localization.yaml
+++ b/signal-localization.yaml
@@ -10,7 +10,7 @@ description_short:    >
     Signal Localization short description
 nav_links:
     -   title:  >
-            OmiXcore home
+            Signal localization
         href:   >
             http://service.tartaglialab.com/new_submission/signal-localization
     -   title:  >
