--- a/signal-localization.yaml
+++ b/signal-localization.yaml
@@ -10,17 +10,17 @@ description_short:    >
     Signal Localization short description
 nav_links:
     -   title:  >
-            Signal localization
+            OmiXcore home
         href:   >
-            http://service.tartaglialab.com/new_submission/signal-localization
+            http://service.tartaglialab.com/new_submission/omixcore
     -   title:  >
             Tutorial
         href:   >
-            http://service.tartaglialab.com/static_files/shared/signal-localization.html
+            http://service.tartaglialab.com/static_files/shared/tutorial_omixcore.html
     -   title:  >
             Documentation
         href:   >
-            http://service.tartaglialab.com/static_files/shared/documentation_signal-localization.html
+            http://service.tartaglialab.com/static_files/shared/documentation_omixcore.html
     -   title:  >
             Group page @ CRG
         href:   >
