--- a/signal-localization.yaml
+++ b/signal-localization.yaml
@@ -5,9 +5,9 @@ title_styled:   >
     Signal Localization
 version:    1.0
 description:    >
-    <p>OmiX Signal localization mode</p>
+    <p><i>OmiXcore</i>, the first method for prediction of lncRNA-protein interactions trained on up-to-date eCLIP data. <i>OmiXcore</i> allows the quantitative prediction of binding site location onto >15.000 lncRNA sequences, facilitating experimental design and analysis.</p>
 description_short:    >
-    
+
 nav_links:
     -   title:  >
             OmiXcore home
