--- a/signal-localization.yaml
+++ b/signal-localization.yaml
@@ -1,5 +1,5 @@
 ---
-title:      OmiX Signal Localization
+title:      Signal Localization
 name:       signal-localization
 title_styled:   >
     Signal Localization
