--- a/signal-localization.yaml
+++ b/signal-localization.yaml
@@ -66,16 +66,10 @@ form_fields:
         required: Yes
         hidden: Yes
 
-examples:
-    #-   reference_id:   55985
-    #    title:          <br>CELF1
-    #    description:    a canonical RNA-binding protein ( from <a href="http://www.sciencedirect.com/science/article/pii/S0300908405002634" target="_blank">Biochimie 2006</a>)
-    -   reference_id: 96670
-        title: P16989 and NM_006312 (NCOR2)
-        description: a positive protein-RNA pair, validated by eCLIP assay.
-    #-   reference_id: 96539
-    #    title: P78344 NR_036527
-    #    description: a negative protein-RNA pair, validated by eCLIP assay.
+#examples:
+#    -   reference_id: 96670
+#        title: P16989 and NM_006312 (NCOR2)
+#        description: a positive protein-RNA pair, validated by eCLIP assay.
 algorithm:
     command:              "signal-localization.py -output_dir=<output_dir>"
     processing_timeout:   72000
